# Isa-REPL

./: .gitignore  Internal_Test.thy  IsaREPL.py  Isa_REPL.thy  Isa_REPL_example.thy  LICENSE  README.md  REPL_aux.ML  ROOT  Test_Markup_Effect.thy  Test_REPL_Serializer.thy  eval_file.py  example_client.py  pyproject.toml  repl_server.sh  repl_server_watch_dog.sh
IsaREPL/: IsaREPL.py  __init__.py
IsaREPL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clients/ocaml/: .gitignore  CHANGES.md  IMPLEMENTATION_NOTES.md  LICENSE  PUBLISH.md  PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  README.md  RELEASE_CHECKLIST.md  SUMMARY.md  TEST_RESULTS.md  dune-project  isa_repl.opam  test_examples.sh  test_with_server.sh
clients/ocaml/examples/: basic_usage.ml  dune  example_context.ml  example_eval.ml  example_lex.ml  example_plugin.ml  example_pretty_unicode.ml  example_rollback.ml  simple_test.ml  test_connection.ml
clients/ocaml/lib/: client.ml  dune  exceptions.ml  isa_repl.ml  isa_repl.mli  position.ml  symbols.ml
contrib/mlmsgpack/: mlmsgpack.sml
doc/: Readme.md
examples/: eval_file.py  example_context.py  example_eval.py  example_lex.py  example_parse.py  example_plugin.py  example_pretty_unicode.py  example_rollback.py  example_sledgehammer.py  example_watcher.py  lex_file.py  parse_thy_header.py  path_of.py  premise_selection.py  run_all_parallel.sh  session_of.py  test_config.py  test_eval.py  test_file.py  test_load_theory.py
tools/: isabelle2unicode.py  unicode2isabelle.py
