(lang dune 3.0)
(name isa_repl)
(version 0.13.0)

(generate_opam_files true)

(source (github xqyww123/Isa-REPL))
(license LGPL-3.0-or-later)
(authors "Qiyuan Xu <xqyww123@gmail.com>")
(maintainers "Qiyuan Xu <xqyww123@gmail.com>")

(package
 (name isa_repl)
 (synopsis "OCaml client for Isabelle REPL")
 (description "A client library for connecting to and interacting with Isabelle REPL servers")
 (depends
  (ocaml (>= 4.14))
  dune
  re
  msgpck))
